@@ -1,15 +1,15 @@
 /*
- * reserved comment block
- * DO NOT REMOVE OR ALTER!
+ * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
  */
 /*
- * Copyright 1999-2004 The Apache Software Foundation.
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,9 +17,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-/*
- * $Id: ObjectPool.java,v 1.2.4.1 2005/09/15 08:15:50 suresh_emailid Exp $
- */
+
 package com.sun.org.apache.xml.internal.utils;
 
 import java.util.ArrayList;
@@ -27,6 +25,7 @@ import java.util.ArrayList;
 import com.sun.org.apache.xml.internal.res.XMLErrorResources;
 import com.sun.org.apache.xml.internal.res.XMLMessages;
 import com.sun.org.apache.xalan.internal.utils.ObjectFactory;
+import java.lang.reflect.InvocationTargetException;
 
 
 /**
@@ -135,13 +134,14 @@ public class ObjectPool implements java.io.Serializable
       // Create a new object if so.
       try
       {
-        return objectType.newInstance();
+        return objectType.getConstructor().newInstance();
       }
-      catch (InstantiationException ex){}
-      catch (IllegalAccessException ex){}
+      catch (InstantiationException | IllegalAccessException | SecurityException |
+              IllegalArgumentException | InvocationTargetException | NoSuchMethodException ex){}
 
       // Throw unchecked exception for error in pool configuration.
-      throw new RuntimeException(XMLMessages.createXMLMessage(XMLErrorResources.ER_EXCEPTION_CREATING_POOL, null)); //"exception creating new instance for pool");
+      throw new RuntimeException(XMLMessages.createXMLMessage(
+              XMLErrorResources.ER_EXCEPTION_CREATING_POOL, null));
     }
     else
     {
